<resources>
    <string name="app_name">TodoApp</string>
    <string name="todoCategories">Categories</string>
    <string name="Business">Business</string>
    <string name="Personal">Personal</string>
    <string name="Others">Others</string>
    <string name="Todo">Todo</string>
    <string name="todoDialog">Add task</string>
    <string name="TextBtnAdd">Todo</string>
    <string name="addTask">Add TAsk</string>


</resources>