<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:background="@color/backgroundTodoApp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Add task"
        android:backgroundTint="@color/white"
        android:hint="@string/todoDialog"
        android:textColor="@color/white"
        android:textColorHint="@color/textColor"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/BusinessCategory"
            android:checked="true"
            android:text="@string/Business"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/PersonalCategory"
            android:text="@string/Personal"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/OtherCategory"
            android:text="@string/Others"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </RadioGroup>
    <Button

        android:id="@+id/btAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/PersonalCategory"
        android:text="@string/addTask"
        />

</LinearLayout>